# ws

./: .gitignore  README.md
catkin_view/: README.md
catkin_view/install/: .rosinstall  local_setup.sh  setup.sh
catkin_view/install/lib/pkgconfig/: realsense2_camera.pc  realsense2_description.pc
catkin_view/src/ORB_SLAM3/: CMakeLists.txt  build.sh
catkin_view/src/ORB_SLAM3/src/: MapDrawer.cc
catkin_ws/: README.md
catkin_ws/logs/darknet_ros/: build.make.000.log.stderr
catkin_ws/logs/kobuki_gazebo_plugins/: build.cmake.000.log.stderr
catkin_ws/logs/robot_voice/: build.make.002.log.stderr
catkin_ws/logs/turtlebot_actions/: build.make.001.log.stderr
catkin_ws/src/my_dynamixel/: package.xml
catkin_ws/src/my_dynamixel/config/: tilt.yaml
catkin_ws/src/my_dynamixel/launch/: controller_manager.launch  start_tilt_controller.launch
catkin_ws/src/my_dynamixel/scripts/: arm_demo.py
catkin_ws/src/robot_map/: CMakeLists.txt
catkin_ws/src/robot_map/scripts/: navigation.py
catkin_ws/src/robot_view/: CMakeLists.txt  package.xml
catkin_ws/src/robot_view/config/: drink.data  drink.names  drink_yolo.cfg
catkin_ws/src/robot_view/data/: classes.txt
catkin_ws/src/robot_voice/: CMakeLists.txt
moveit_ws/: README.md
moveit_ws/src/differentiable-robot-model/: CMakeLists.txt  package.xml
moveit_ws/src/differentiable-robot-model/diff_robot_data/kuka_iiwa/urdf/: iiwa7.urdf
moveit_ws/src/iiwa7_control/: CMakeLists.txt  package.xml
moveit_ws/src/iiwa7_moveit_config/: .setup_assistant  package.xml
ws_slam/: README.md
(+356 files in other folders)
